test/test_examples/syntactic_examples/syntax_error/error_statement_22.zig
// Syntax error: wrong data type in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : string = "syntax error";
}